questions render in new UI form and default questions load automatically

--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -37,58 +37,10 @@
         <div class="row">
             <div class="col-12 text-white">Custom Questions</div>
         </div>
-        <div id="custom-questions-section questions-container">
+        <div id="questions-container">
             <div class="row d-flex align-items-center my-4">
                 <div class="ml-4">
-                    <img class="icon-effects\" src="/images/hamburger_white.svg">
-                </div>
-                <div class="col-5">
-                    <input type="text" class="form-control" placeholder="e.g. What is your first name?"/>
-                </div>
-                <div class="col-2">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Text Answer</option>
-                        <option>Radio Button</option>
-                        <option>Checkbox</option>
-                    </select>
-                </div>
-                <div class="d-flex align-items-center">
-                    <span class="text-white mr-2">Required?</span>
-                    <input type="checkbox" class="big-checkbox">
-                </div>
-                <div class="col-3">
-                    <input type="text" class="form-control" placeholder="tag (e.g. #fname)"/>
-                </div>
-            </div>
-
-
-            <div class="row d-flex align-items-center">
-                <div class="ml-4">
-                    <img class="icon-effects\" src="/images/hamburger_white.svg">
-                </div>
-                <div class="col-5">
-                    <input type="text" class="form-control" placeholder="e.g. What is your first name?"/>
-                </div>
-                <div class="col-2">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Text Answer</option>
-                        <option>Radio Button</option>
-                        <option>Checkbox</option>
-                    </select>
-                </div>
-                <div class="d-flex align-items-center">
-                    <span class="text-white mr-2">Required?</span>
-                    <input type="checkbox" class="big-checkbox">
-                </div>
-                <div class="col-3">
-                    <input type="text" class="form-control" placeholder="tag (e.g. #fname)"/>
-                </div>
-            </div>
-
-
-            <div class="row d-flex align-items-center my-4">
-                <div class="ml-4">
-                    <img class="icon-effects\" src="/images/hamburger_white.svg">
+                    <img class="icon-effects" src="/images/hamburger_white.svg">
                 </div>
                 <div class="col-5">
                     <input type="text" class="form-control" placeholder="e.g. What is your first name?"/>
@@ -127,17 +79,7 @@
                     <span>Tags: </span>
                 </div>
                 <div class="col-11 d-flex">
-                    <div id="tag-container">
-                        <!-- <button class="btn btn-outline-dark mr-3">#FNAME</button>
-                        <button class="btn btn-outline-dark mr-3">#LNAME</button>
-                        <button class="btn btn-outline-dark mr-3">#SUB_PRONOUN</button>
-                        <button class="btn btn-outline-dark mr-3">#OBJ_PRONOUN</button>
-                        <button class="btn btn-outline-dark mr-3">#OBJ_PRONOUN</button> -->
-                        <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
-                        <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
-                        <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
-                        <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
-                    </div>
+                    <div id="tag-container"></div>
                 </div>
             </div>
             <!-- <div class="col col-1">Template:</div> -->
