add button works

--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -63,7 +63,7 @@
         </div>
         <div class="row dflex">
             <div class="ml-4">
-                <img id="add-question" class="icon-effects\" src="images/plus.png">
+                <img id="add-question" class="icon-effects\" src="images/plus.png" onclick="addQuestion()">
             </div>
         </div>
     </div>
