--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -26,7 +26,7 @@
                 <div class="form-row">
                     <div class = "col">
                         <div class="input-group search-bar col">
-                            <input id="search-input" type="text" class="form-control" name="email" placeholder="Filter by Email">
+                            <input id="search-input" type="email" class="form-control" name="email" placeholder="Filter by Email">
                             <div class="input-group-append">
                                 <button class="btn clr-btn btn-outline-secondary" type="button">x</button>
                             </div>
