form works for everything but checkbox/radio

--- a/letterOfRecGenerator/public/css/template-editor.css
+++ b/letterOfRecGenerator/public/css/template-editor.css
@@ -13,12 +13,12 @@
      width: 32px;
  }
 
-.section-header {
+/* .section-header {
     color: #FF473A;
     /*text-align: center;*/
     font-size: 15px;
     width: 200px;
-}
+} */
 
 #tags{
     border: solid black;
