--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -37,29 +37,26 @@
     <div class="container py-3 my-3 section">
         <div class="row"><div class="col-12 text-white">Custom Questions</div></div>
         <div id="questions-container">
-            <div class="row">
-                <div class="col-12 text-white">Custom Questions</div>
-            </div>
-            <div class="row d-flex align-items-center my-4">
-                <div class="ml-4">
-                    <img class="icon-effects" src="/images/hamburger_white.svg">
-                </div>
-                <div class="col-5">
-                    <input type="text" class="form-control" placeholder="e.g. What is your first name?"/>
-                </div>
-                <div class="col-2">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Text Answer</option>
-                        <option>Radio Button</option>
-                        <option>Checkbox</option>
-                    </select>
-                </div>
-                <div class="d-flex align-items-center">
-                    <span class="text-white mr-2">Required?</span>
-                    <input type="checkbox" class="big-checkbox">
-                </div>
-                <div class="col-3">
-                    <input type="text" class="form-control" placeholder="tag (e.g. #fname)"/>
+            <div class="sortable-questions">
+                <div class="row error-container">
+                    <div class="question-outer-container">
+                        <div class="question-container d-flex align-items-center my-4 error-container question-outer-container"
+                            data-id="0">
+                            <div class="ml-4"><img class="icon-effects" src="/images/hamburger_white.svg"></div>
+                            <div class="col-5"><input type="text" class="form-control"
+                                    placeholder="Enter new question here..." data-type="value"></div>
+                            <div class="col-2"><select class="form-control" id="exampleFormControlSelect1">
+                                    <option>Text Answer</option>
+                                    <option>Radio Button</option>
+                                    <option>Checkbox</option>
+                                    <option>Custom</option>
+                                </select></div>
+                            <div class="d-flex align-items-center"><span class="text-white mr-2">Required?</span><input
+                                    type="checkbox" checked="" class="big-checkbox"></div>
+                            <div class="col-3"><input type="text" class="form-control" placeholder="tag (e.g. #fname)"
+                                    data-type="tag"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
