--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -1,152 +1,182 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css"/>
-    <link rel="stylesheet" href="/css/template-editor.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/all.css"/>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script> 
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/css/template-editor.css" />
+    <link rel="stylesheet" type="text/css" href="/css/all.css" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="//sortablejs.github.io/Sortable/Sortable.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.2.1/trix.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.2.1/trix.js"></script>
-    <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.2.1/trix.js"></script>
+    <script type="text/javascript" src="http://livejs.com/live.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
-<div id="tmp-editor-cont" class = "templates">
-    <header>
-        <% include ../partials/header %>
-    </header>
-    <!-- start of bootstrap overhaul -->
-    <p class="title"><%= title %></p>
-    <div class="container py-3 my-3 section">
-        <div class="row my-3 section">
-            <div class="col d-flex align-items-center error-container" >
-                <!-- <div class="error-container"> -->
+    <div id="tmp-editor-cont" class="templates">
+        <header>
+            <% include ../partials/header %>
+        </header>
+        <!-- start of bootstrap overhaul -->
+        <p class="title"><%= title %></p>
+        <div class="container py-3 my-3 section">
+            <div class="row my-3 section">
+                <div class="col d-flex align-items-center error-container">
+                    <!-- <div class="error-container"> -->
                     <div class="text-white section-header">Template Name</div>
                     <div class="ml-2 col-6">
-                        <input id="name-container-text-field" type="text" class="form-control" value="<%= templateName %>" placeholder="e.g. Graduate School Recommendation Form"/>
+                        <input id="name-container-text-field" type="text" class="form-control"
+                            value="<%= templateName %>" placeholder="e.g. Graduate School Recommendation Form" />
                     </div>
-                <!-- </div> -->
+                    <!-- </div> -->
+                </div>
             </div>
         </div>
-    </div>
-    
-    <div class="container py-3 my-3 section">
-        <div class="row"><div class="col-12 text-white">Custom Questions</div></div>
-        <div id="questions-container">
-            <div class="sortable-questions">
-                <div class="row error-container">
-                    <div class="question-outer-container">
-                        <div class="question-container d-flex align-items-center my-4 error-container question-outer-container"
-                            data-id="0">
-                            <div class="ml-4"><img class="icon-effects" src="/images/hamburger_white.svg"></div>
-                            <div class="col-5"><input type="text" class="form-control"
-                                    placeholder="Enter new question here..." data-type="value"></div>
-                            <div class="col-2"><select class="form-control" id="exampleFormControlSelect1">
-                                    <option>Text Answer</option>
-                                    <option>Radio Button</option>
-                                    <option>Checkbox</option>
-                                    <option>Custom</option>
-                                </select></div>
-                            <div class="d-flex align-items-center"><span class="text-white mr-2">Required?</span><input
-                                    type="checkbox" checked="" class="big-checkbox"></div>
-                            <div class="col-3"><input type="text" class="form-control" placeholder="tag (e.g. #fname)"
-                                    data-type="tag"></div>
+
+        <div class="container py-3 my-3 section">
+            <div class="row">
+                <div class="col-12 text-white">Custom Questions</div>
+            </div>
+            <div id="questions-container">
+                <div class="sortable-questions">
+                    <div class="row error-container">
+                        <div class="question-outer-container">
+                            <div class="question-container d-flex align-items-center my-4 error-container question-outer-container"
+                                data-id="0">
+                                <div class="ml-4"><img class="icon-effects" src="/images/hamburger_white.svg"></div>
+                                <div class="row col">
+                                    <div class="col col-5"><input type="text" class="form-control"
+                                            placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-2"><select class="form-control" id="exampleFormControlSelect1">
+                                            <option>Text Answer</option>
+                                            <option>Radio Button</option>
+                                            <option>Checkbox</option>
+                                            <option>Custom</option>
+                                        </select></div>
+                                    <div class="d-flex align-items-center"><span
+                                            class="text-white mr-2">Required?</span><input type="checkbox" checked=""
+                                            class="big-checkbox"></div>
+                                    <div class="col-3"><input type="text" class="form-control"
+                                            placeholder="tag (e.g. #fname)" data-type="tag"></div>
+
+                                    <!-- Checkbox questions -->
+                                    <div class="col col-3 mt-3"><input type="text" class="form-control"
+                                            placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-3 mt-3"><input type="text" class="form-control"
+                                        placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-6"></div>
+
+                                    <!-- Checkbox questions -->
+                                    <div class="col col-3 mt-3"><input type="text" class="form-control"
+                                        placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-3 mt-3"><input type="text" class="form-control"
+                                        placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-3 mt-3"><input type="text" class="form-control"
+                                        placeholder="Enter new question here..." data-type="value"></div>
+                                    <div class="col col-6"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row dflex">
+                <div class="ml-4">
+                    <img id="add-question" class="icon-effects\" src="images/plus.png" onclick="addQuestion()">
+                </div>
+            </div>
+        </div>
+
+        <!-- letter boilerplate -->
+        <div class="container py-3 my-3 section">
+            <div class="row">
+                <div class="col-12 text-white">Letter Boilerplate</div>
+            </div>
+            <div class="row bg-light m-3 p-3 ">
+                <div id='tags' class="d-flex align-items-center m-3 p-3">
+                    <div class="col-1">
+                        <span>Tags: </span>
+                    </div>
+                    <div class="col-11 d-flex">
+                        <div id="tag-container"></div>
+                    </div>
+                </div>
+                <!-- <div class="col col-1">Template:</div> -->
+                <div class="col col-12 error-container my-5">
+                    <div id="letter-container" class="">
+                        <div class="">
+                            <trix-editor class="trix-content" id="letter-text-area"></trix-editor>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row dflex">
-            <div class="ml-4">
-                <img id="add-question" class="icon-effects\" src="images/plus.png" onclick="addQuestion()">
-            </div>
-        </div>
-    </div>
 
-    <!-- letter boilerplate -->
-    <div class="container py-3 my-3 section">
-        <div class="row">
-            <div class="col-12 text-white">Letter Boilerplate</div>
-        </div>
-        <div class="row bg-light m-3 p-3 ">
-            <div id='tags' class="d-flex align-items-center m-3 p-3">
-                <div class="col-1">
-                    <span>Tags: </span>
+        <!-- end of bootstrap overhaul -->
+        <div id="template-editor-container">
+            <script>
+                function sendFile() {
+                    // Form Data
+                    var formData = new FormData();
+
+                    var fileSelect = document.getElementById("template-upload-file");
+                    if (fileSelect.files && fileSelect.files.length == 1) {
+                        var file = fileSelect.files[0]
+                        formData.set("file", file, file.name);
+                    }
+
+                    // Http Request
+                    var request = new XMLHttpRequest();
+                    request.open('POST', "/template-dashboard/uploadLetterTemplate");
+                    request.send(formData);
+
+                    //Submit success
+                    alert('template uploaded');
+                    //location.reload();
+                }
+            </script>
+            <div class="flex-display upload-cont">
+                <h2 id="upload-template" class="section-header">Apply Body Text to Custom Template </h2>
+                <div class="upload-preview-container flex1">
+                    <form encType="multipart/form-data">
+                        <input type="file" id="template-upload-file" />
+                        <button type="button" onclick="sendFile()">Upload</button>
+                    </form>
                 </div>
-                <div class="col-11 d-flex">
-                    <div id="tag-container"></div>
-                </div>
             </div>
-            <!-- <div class="col col-1">Template:</div> -->
-            <div class="col col-12 error-container my-5">
-                <div id="letter-container" class="">
-                    <div class="">
-                        <trix-editor class="trix-content" id="letter-text-area"></trix-editor>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- end of bootstrap overhaul -->
-    <div id="template-editor-container">
-        <script>
-        function sendFile(){
-        // Form Data
-        var formData = new FormData();
-
-        var fileSelect = document.getElementById("template-upload-file");
-        if(fileSelect.files && fileSelect.files.length == 1){
-        var file = fileSelect.files[0]
-        formData.set("file", file , file.name);
-        }
-
-        // Http Request
-        var request = new XMLHttpRequest();
-        request.open('POST', "/template-dashboard/uploadLetterTemplate");
-        request.send(formData);
-
-        //Submit success
-        alert('template uploaded');
-        //location.reload();
-        }
-        </script>
-        <div class="flex-display upload-cont">
-          <h2 id="upload-template" class="section-header">Apply Body Text to Custom Template </h2>
-          <div class="upload-preview-container flex1">
-            <form encType="multipart/form-data">
-              <input type="file" id="template-upload-file" />
-              <button type="button" onclick="sendFile()">Upload</button>
-            </form>
-          </div>
-        </div>
-
-        <br/><br/>
-        <%  if (typeof saveSwitch == "boolean") {
+            <br /><br />
+            <%  if (typeof saveSwitch == "boolean") {
             if(saveSwitch){%>
             <div class="flex-row">
                 <button id="save-button" onclick="saveTemplate()">Save</button>
             </div>
-        <% }} else if (typeof saveSwitch == "string") {
+            <% }} else if (typeof saveSwitch == "string") {
                 if (saveSwitch == "true"){%>
             <div class="flex-row">
                 <button id="save-button" onclick="saveTemplate()">Save</button>
             </div>
-        <% }} %>
+            <% }} %>
+        </div>
     </div>
-</div>
 
-<script type="text/javascript" src="/javascripts/template-editor.js" id="<%= id %>"
-            letterheadImgData="<%= letterheadImage %>" footerImgData="<%= footerImage %>" saveSwitchData="<%= saveSwitch %>"></script>
-<script type="text/javascript" src="/javascripts/template-editor-tags.js"></script>
+    <script type="text/javascript" src="/javascripts/template-editor.js" id="<%= id %>"
+        letterheadImgData="<%= letterheadImage %>" footerImgData="<%= footerImage %>"
+        saveSwitchData="<%= saveSwitch %>"></script>
+    <script type="text/javascript" src="/javascripts/template-editor-tags.js"></script>
 </body>
 
 <div id="add-question-modal">
-    <div class="content">  
+    <div class="content">
         <div class="flex-row">
             <h1>Select Question Type</h1>
         </div>
@@ -175,4 +205,5 @@
         </div>
     </div>
 </div>
+
 </html>
