refactored question html generation to new format and to allow for easier f-string manipulation

--- a/letterOfRecGenerator/public/css/template-editor.css
+++ b/letterOfRecGenerator/public/css/template-editor.css
@@ -15,7 +15,7 @@
 
 /* .section-header {
     color: #FF473A;
-    /*text-align: center;*/
+    text-align: center;
     font-size: 15px;
     width: 200px;
 } */
