--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -70,18 +70,18 @@
 
                                     <!-- Checkbox questions -->
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
-                                            placeholder="Enter new question here..." data-type="value"></div>
+                                            placeholder="Radio Button Option" data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
-                                        placeholder="Enter new question here..." data-type="value"></div>
+                                        placeholder="Text to Replace Tag" data-type="value"></div>
                                     <div class="col col-6"></div>
 
                                     <!-- Checkbox questions -->
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
-                                        placeholder="Enter new question here..." data-type="value"></div>
+                                        placeholder="Checkbox Option." data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
-                                        placeholder="Enter new question here..." data-type="value"></div>
+                                        placeholder="Text to Replace Tag" data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
-                                        placeholder="Enter new question here..." data-type="value"></div>
+                                        placeholder="Tag (e.g. <!check-value>" data-type="value"></div>
                                     <div class="col col-6"></div>
                                 </div>
                             </div>
