checkbox and radio button forms are generated from existing questions

--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -68,7 +68,7 @@
                                     <div class="col-3"><input type="text" class="form-control"
                                             placeholder="tag (e.g. #fname)" data-type="tag"></div>
 
-                                    <!-- Checkbox questions -->
+                                    <!-- Radio Button questions -->
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
                                             placeholder="Radio Button Option" data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
