--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -82,7 +82,12 @@
                                         placeholder="Text to Replace Tag" data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
                                         placeholder="Tag (e.g. <!check-value>" data-type="value"></div>
-                                    <div class="col col-6"></div>
+                                    <div class="col col-3"></div>
+
+                                    <div class="col mt-3">
+                                        <!-- <img class="add-question" src="images/plus.png" onclick=""> -->
+                                        <button class="btn btn-light btn-sm">Add Option</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -91,7 +96,7 @@
             </div>
             <div class="row dflex">
                 <div class="ml-4">
-                    <img id="add-question" class="icon-effects\" src="images/plus.png" onclick="addQuestion()">
+                    <img class="add-question" src="images/plus.png" onclick="addQuestion()">
                 </div>
             </div>
         </div>
