template and date chaining

--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -26,7 +26,7 @@
                 <div class="form-row">
                     <div class = "col">
                         <div class="input-group search-bar col">
-                            <input id="search-input" type="email" class="form-control" name="email" placeholder="Filter by Email">
+                            <input id="search-input" type="email" class="form-control filter-input" name="email" placeholder="Filter by Email">
                             <div class="input-group-append">
                                 <button class="btn clr-btn btn-outline-secondary" type="button">x</button>
                             </div>
@@ -53,7 +53,7 @@
             <div class="form-row adv-search-options">
                 <div class="col">
                     <div class="input-group col mt-2">
-                        <input id="template-input" type="text" class="form-control ml-auto" name="template" placeholder="Filter by Template">
+                        <input id="template-input" type="text" class="form-control ml-auto filter-input" name="template" placeholder="Filter by Template">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
                         </div>   
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="input-group col mt-2">
-                        <input id="org-input" type="text" class="form-control" name="org" placeholder="Filter by Organization">
+                        <input id="org-input" type="text" class="form-control filter-input" name="org" placeholder="Filter by Organization">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
                         </div>   
@@ -69,13 +69,13 @@
                 </div>
                 <div class="col-md-4">
                     <div class="input-group col mt-2">
-                        <input id="startdate-input" type="date" class="form-control ml-auto" name="startdate" placeholder="Filter by Start Date">
+                        <input id="startdate-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control ml-auto filter-input" name="startdate" placeholder="Filter by Start Date">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
                         </div>   
                     </div>
                     <div class="input-group col mt-2 mb-2">
-                        <input id="enddate-input" type="date" class="form-control ml-auto" name="enddate" placeholder="Filter by End Date">
+                        <input id="enddate-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control ml-auto filter-input" name="enddate" placeholder="Filter by End Date">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
                         </div> 
