added remove button UI to prototype

--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -53,7 +53,7 @@
                             <div class="question-container d-flex align-items-center my-4 error-container question-outer-container"
                                 data-id="0">
                                 <div class="ml-4"><img class="icon-effects" src="/images/hamburger_white.svg"></div>
-                                <div class="row col">
+                                <div class="row col d-flex align-items-end">
                                     <div class="col col-5"><input type="text" class="form-control"
                                             placeholder="Enter new question here..." data-type="value"></div>
                                     <div class="col col-2"><select class="form-control" id="exampleFormControlSelect1">
@@ -82,12 +82,19 @@
                                         placeholder="Text to Replace Tag" data-type="value"></div>
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
                                         placeholder="Tag (e.g. <!check-value>" data-type="value"></div>
-                                    <div class="col col-3"></div>
+                                    
+                                    <div class="col col-1">
+                                        <img class="remove-btn" src="/images/remove_white.png" alt="Remove">
+                                    </div>
+                                    
+                                    <div class="col col-2"></div>
 
                                     <div class="col mt-3">
-                                        <!-- <img class="add-question" src="images/plus.png" onclick=""> -->
                                         <button class="btn btn-light btn-sm">Add Option</button>
                                     </div>
+                                </div>
+                                <div class="mr-4">
+                                    <img class="remove-btn" src="/images/remove_white.png" alt="Remove">
                                 </div>
                             </div>
                         </div>
