--- a/letterOfRecGenerator/public/css/template-editor.css
+++ b/letterOfRecGenerator/public/css/template-editor.css
@@ -13,6 +13,11 @@
      width: 32px;
  }
 
+ .remove-btn{
+    width: 40px;
+    height: 40px;
+ }
+
 /* .section-header {
     color: #FF473A;
     text-align: center;
