--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -28,7 +28,7 @@
                         <div class="input-group search-bar col">
                             <input id="search-input" type="email" class="form-control filter-input" name="email" placeholder="Filter by Email">
                             <div class="input-group-append">
-                                <button class="btn clr-btn btn-outline-secondary" type="button">x</button>
+                                <button class="btn clr-btn search-x" type="button">x</button>
                             </div>
                             <div class="input-group-append">
                                 <button type="submit" class="btn btn-outline-secondary" id="search-btn">Search</button>
@@ -55,7 +55,7 @@
                     <div class="input-group col mt-2">
                         <input id="template-input" type="text" class="form-control ml-auto filter-input" name="template" placeholder="Filter by Template">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
+                            <button class="btn search-x clr-btn" type="button">x</button>
                         </div>   
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     <div class="input-group col mt-2">
                         <input id="org-input" type="text" class="form-control filter-input" name="org" placeholder="Filter by Organization">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
+                            <button class="btn search-x clr-btn" type="button">x</button>
                         </div>   
                     </div>
                 </div>
@@ -71,13 +71,13 @@
                     <div class="input-group col mt-2">
                         <input id="startdate-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control ml-auto filter-input" name="startdate" placeholder="Filter by Start Date">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
+                            <button class="btn search-x clr-btn" type="button">x</button>
                         </div>   
                     </div>
                     <div class="input-group col mt-2 mb-2">
                         <input id="enddate-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control ml-auto filter-input" name="enddate" placeholder="Filter by End Date">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary clr-btn" type="button">x</button>
+                            <button class="btn search-x clr-btn" type="button">x</button>
                         </div> 
                     </div>
                     <button class="ml-auto mr-3 mb-2 btn" style='background-color: #FFFFFF;' id="advanced-search-btn">Search</button>
