--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="/css/template-dashboard.css" />
     <link rel="stylesheet" type="text/css" href="/css/table.css" />
     <link rel="stylesheet" type="text/css" href="/css/modal.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <style type="text/css">
 
     </style>
@@ -24,7 +27,7 @@
             <p class="title">
                 <%= title %>
             </p>
-            <div class="add-btn" onclick="openModal()">+ Create Template</div>
+            <div class="add-btn mr-2 btn" onclick="openModal()">+ Create Template</div>
         </div>
 
         <div id="myModal" class="modal">
