--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -83,8 +83,8 @@
                                     <div class="col col-3 mt-3"><input type="text" class="form-control"
                                         placeholder="Tag (e.g. <!check-value>" data-type="value"></div>
                                     
-                                    <div class="col col-1">
-                                        <img class="remove-btn" src="/images/remove_white.png" alt="Remove">
+                                    <div class="col col-1 pb-1">
+                                        <img class="remove-option-btn" src="/images/remove_white.png" alt="Remove">
                                     </div>
                                     
                                     <div class="col col-2"></div>
@@ -93,9 +93,9 @@
                                         <button class="btn btn-light btn-sm">Add Option</button>
                                     </div>
                                 </div>
-                                <div class="mr-4">
-                                    <img class="remove-btn" src="/images/remove_white.png" alt="Remove">
-                                </div>
+                            </div>
+                            <div class="mr-4 mt-4">
+                                <img class="remove-question-btn" src="/images/remove_white.png" alt="Remove">
                             </div>
                         </div>
                     </div>
